--- a/crashlib/src/main/AndroidManifest.xml
+++ b/crashlib/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.sharejoys.crashlib"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.sharejoys.crashlib"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,11 +13,23 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ShowExceptionActivity"
+            android:name=".ui.ShowExceptionActivity"
             android:exported="false"
             android:launchMode="singleInstance"
             android:process=":exception"
             android:screenOrientation="sensor"/>
+
+        <provider
+            android:name=".util.CrashFileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"
+                tools:replace="android:resource"/>
+        </provider>
     </application>
 
 </manifest>
