--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':crashlib')
+//    implementation project(':crashlib')
+
+    //奔溃日志捕获显示
+    api "com.github.tuikes:CrashHandler:v2.3.1"
 }
